@@ -1,8 +1,8 @@
 Encoding: UTF-8
 Package: smoothHR
 Type: Package
-Version: 1.0.4
-Date: 2021-12-06
+Version: 1.0.5
+Date: 2022-07-10
 Title: Smooth Hazard Ratio Curves Taking a Reference Value
 Authors@R: c(
 	person(
