@@ -7,7 +7,7 @@ To better understand the effects that each continuous covariate has on the outco
 taking a specific covariate value as reference. Confidence bands for these curves are also derived.
 }
 \usage{\method{plot}{HR}(x, predictor, prob=NULL, pred.value=NULL, conf.level=0.95, round.x=NULL,
-ref.label=NULL, col, main, xlab, ylab, lty, xlim, ylim, xx, ...)}
+ref.label=NULL, col, main, xlab, ylab, lty, xlim, ylim, xx, ylog=TRUE, log=ifelse(ylog, "", "y"), ...)}
 
 \arguments{
 	\item{x}{An object of class HR}
@@ -29,6 +29,8 @@ ref.label=NULL, col, main, xlab, ylab, lty, xlim, ylim, xx, ...)}
 	\item{xlim}{The range of x and y values with sensible defaults.}
 	\item{ylim}{The range of x and y values with sensible defaults.}
 	\item{xx}{Vector of values (from the variable \code{predictor}) to be shown in the x axis.}
+	\item{ylog}{logical. If \code{TRUE} plots natural logarithm of hazard ratio.}
+	\item{log}{See \code{\link{plot.default}} for details.}
 	\item{\dots}{Other arguments.}
 }
 
